--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "dotenv": "^17.2.2",
     "express": "^4.21.2",
-    "openai": "^5.22.1"
+    "dotenv": "^17.2.2",
+    "openai": "^5.22.1",
+    "body-parser": "^2.2.0"
   }
 }
