--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.21.2",
+    "better-sqlite3": "^8.7.0",
+    "body-parser": "^2.2.0",
     "dotenv": "^17.2.2",
-    "openai": "^5.22.1",
-    "body-parser": "^2.2.0"
+    "express": "^4.21.2",
+    "openai": "^5.22.1"
   }
 }
